# vsc-cpp-cmake-example

./: .clang-format  CMakeLists.txt  LICENSE  README.md  example-app.cpp  format.sh
.github/instructions/: cpp.instructions.md
example/: CMakeLists.txt  Example.cpp  Example.hpp
include/: Config.h.in
